# permearly

./: .flake8  LICENCE  README.rst  noxfile.py  pyproject.toml
permearly/: cli.py
tests/: test_cli.py  test_permearly.py
