[tool.poetry]
name = "permearly"
version = "0.1.0"
description = "permearly is a simple template expander"
authors = ["James Vandenberg <basalisk@gmail.com>"]

[tool.poetry.scripts]
permearly = "permearly.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["permearly"]

[tool.coverage.report]
show_missing = true
